[package]
name = "srz"
description = "Sunrise - A source code summary tool"
version = "0.1.0"
authors = ["Expenses <expenses@airmail.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "*"
toml = "*"
pathdiff = "*"
clap = {version = "*", features = ["yaml"]}
read_input = "*"
ansi_term = "*"
